[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/Built/Ubuntu_M_24tred.tres" type="FontFile" id=1]
[ext_resource path="res://fonts/Built/Ubuntu_MI_48tred.tres" type="FontFile" id=2]
[ext_resource path="res://GameDVDCardtridge/TemplateHexagonEngine/LevelCardtridge/JustAGolf/YayComplete.gd" type="Script" id=3]


[node name="YayComplete" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -374.5
offset_top = 127.817
offset_right = 374.5
offset_bottom = 384.817
exclusive = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
ContentWindow = "Yay you've level complete!"

[node name="Contains" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Say" type="Label" parent="Contains"]
offset_right = 749.0
offset_bottom = 100.0
custom_minimum_size = Vector2( 0, 100 )
theme_override_fonts/font = ExtResource( 1 )
text = "Yay you've level complete!"
align = 1
valign = 1

[node name="Buttone" type="HBoxContainer" parent="Contains"]
offset_top = 104.0
offset_right = 749.0
offset_bottom = 257.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="BackMenu" type="Button" parent="Contains/Buttone"]
offset_right = 247.0
offset_bottom = 153.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource( 2 )
text = "Home"

[node name="Reset" type="Button" parent="Contains/Buttone"]
offset_left = 251.0
offset_right = 498.0
offset_bottom = 153.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource( 2 )
text = "Reset"

[node name="NextLevel" type="Button" parent="Contains/Buttone"]
offset_left = 502.0
offset_right = 749.0
offset_bottom = 153.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource( 2 )
text = "Next"
[connection signal="pressed" from="Contains/Buttone/BackMenu" to="." method="_on_BackMenu_pressed"]
[connection signal="pressed" from="Contains/Buttone/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="Contains/Buttone/NextLevel" to="." method="_on_NextLevel_pressed"]
